# hls-reader

./: README.md  pyproject.toml
m3u8_client/: __init__.py  async_client.py  client.py
