[build-system]
requires = [
    "hatchling >= 1.13.0",
    "wheel",
    "Cython~=3.0.5"
]
build-backend = "hatchling.build"

[project]
name = 'm3u8_client'
dynamic = [
  'version'
]
readme = 'README.md'
requires-python = '>=3.9'
dependencies = [
  "httpx"
]

[tool.hatch.version]
path = "m3u8_client/__init__.py"

[tool.hatch.metadata]
allow-direct-references = true